--- a/bin/application/Viewfxml/car_details.fxml
+++ b/bin/application/Viewfxml/car_details.fxml
@@ -33,7 +33,7 @@
                <children>
                   <Text layoutX="14.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="voiture details">
                      <font>
-                        <Font size="25.0" />
+                        <Font name="System Bold" size="25.0" />
                      </font>
                   </Text>
                </children>
@@ -41,43 +41,39 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
                   <TextField fx:id="marque" layoutX="83.0" layoutY="26.0" prefHeight="30.0" prefWidth="300.0" promptText="Marque" styleClass="inpt" stylesheets="@inputs.css" />
+                  <Text layoutX="83.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
                   <TextField fx:id="modele" layoutX="83.0" layoutY="26.0" prefHeight="30.0" prefWidth="300.0" promptText="Modele" styleClass="inpt" stylesheets="@inputs.css" />
+                  <Text layoutX="81.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
                   <TextField fx:id="couleur" layoutX="83.0" layoutY="26.0" prefHeight="30.0" prefWidth="300.0" promptText="Couleur" styleClass="inpt" stylesheets="@inputs.css" />
+                  <Text layoutX="83.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                <children>
                   <TextField fx:id="vin" layoutX="83.0" layoutY="25.0" prefHeight="30.0" prefWidth="300.0" promptText="vin" styleClass="inpt" stylesheets="@inputs.css" />
+                  <Text layoutX="83.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Button fx:id="btn_supprime" layoutX="14.0" layoutY="26.0" mnemonicParsing="false" onAction="#supprime" prefHeight="30.0" prefWidth="100.0" text="Supprime" />
-                  <Button fx:id="retour" layoutX="352.0" layoutY="23.0" mnemonicParsing="false" onAction="#retour" prefHeight="30.0" prefWidth="100.0" text="&lt; Retour" />
+                  <Button fx:id="retour" layoutX="371.0" layoutY="20.0" mnemonicParsing="false" onAction="#retour" prefHeight="40.0" prefWidth="130.0" style="-fx-background-color: transpaert;" text="&lt; Retour">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font></Button>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TableView fx:id="car_rdv" layoutX="-8.0" layoutY="38.0" prefHeight="450.0" prefWidth="460.0" stylesheets="@tablestyle.css">
-                    <columns>
-                      <TableColumn fx:id="nom_col" prefWidth="75.0" text="Nom client" />
-                      <TableColumn fx:id="prenom_col" prefWidth="64.0" text="Prenom" />
-                        <TableColumn fx:id="dd_col" prefWidth="96.7999267578125" text="Date Debut" />
-                        <TableColumn fx:id="df_col" prefWidth="94.40010070800781" text="Date Fin" />
-                        <TableColumn fx:id="etat_col" prefWidth="79.2000732421875" text="Etat" />
-                        <TableColumn fx:id="action_col" prefWidth="53.5999755859375" text="Action" />
-                    </columns>
-                  </TableView>
                   <Text layoutX="-8.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les Rendez-vous">
                      <font>
                         <Font size="18.0" />
@@ -85,22 +81,37 @@
                   </Text>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
-                  <Button fx:id="btn_mod" layoutX="352.0" layoutY="23.0" mnemonicParsing="false" onAction="#modifier" prefHeight="30.0" prefWidth="100.0" text="Modifier" />
+                  <Button fx:id="btn_mod" layoutX="208.0" layoutY="25.0" mnemonicParsing="false" onAction="#modifier" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@btn.css" text="Modifier">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
                   <TextField fx:id="matricule" layoutX="83.0" layoutY="26.0" prefHeight="30.0" prefWidth="300.0" promptText="matricule" styleClass="inpt" stylesheets="@inputs.css" />
+                  <Text layoutX="83.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <TableView fx:id="car_rdv" layoutX="-14.0" layoutY="-126.0" prefHeight="370.0" prefWidth="515.0" stylesheets="@tablestyle.css">
+                    <columns>
+                      <TableColumn fx:id="nom_col" prefWidth="75.0" text="Nom client" />
+                      <TableColumn fx:id="prenom_col" prefWidth="59.20001220703125" text="Prenom" />
+                        <TableColumn fx:id="dd_col" prefWidth="116.0" text="Date Debut" />
+                        <TableColumn fx:id="df_col" prefWidth="104.80003356933594" text="Date Fin" />
+                        <TableColumn fx:id="etat_col" prefWidth="80.800048828125" text="Etat" />
+                        <TableColumn fx:id="action_col" prefWidth="79.199951171875" text="Action" />
+                    </columns>
+                  </TableView>
                </children>
             </Pane>
          </children>
       </GridPane>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
    </children>
 </Pane>
