--- a/src/application/Viewfxml/btn.css
+++ b/src/application/Viewfxml/btn.css
@@ -48,3 +48,10 @@
   -fx-border-width: 2px;
   -fx-border-radius: 10px;
 }
+
+/* .btn_add:pressed {
+  -fx-background-color: "#fac400";
+  -fx-text-fill: black;
+  -fx-background-radius: 8px;
+  -fx-background-radius: 8px;
+} */
