--- a/src/application/Viewfxml/btn.css
+++ b/src/application/Viewfxml/btn.css
@@ -49,9 +49,7 @@
   -fx-border-radius: 10px;
 }
 
-/* .btn_add:pressed {
+.btn_add:pressed {
   -fx-background-color: "#fac400";
   -fx-text-fill: black;
-  -fx-background-radius: 8px;
-  -fx-background-radius: 8px;
-} */
+}
